--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Second project(Hexlet)",
   "main": "gendiff.js",
-  "bin":{
+  "bin": {
     "gendiff": "./gendiff.js"
   },
   "scripts": {
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/vareshka0101/frontend-project-46#readme",
   "dependencies": {
     "commander": "^12.1.0",
-    "fs": "^0.0.1-security"
+    "fs": "^0.0.1-security",
+    "lodash": "^4.17.21"
   }
 }
