--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "@hexlet/code",
   "version": "1.0.0",
   "description": "Second project(Hexlet)",
-  "main": "gendiff.js",
+  "main": "src/index.js",
   "bin": {
     "gendiff": "./gendiff.js"
   },
   "scripts": {
-    "start": "node gendiff.js"
+    "start": "node gendiff.js",
+    "test": "jest",
+    "test:coverage": "jest --coverage",
+    "test:watch": "jest --watch"
   },
   "repository": {
     "type": "git",
@@ -24,5 +27,10 @@
     "commander": "^12.1.0",
     "fs": "^0.0.1-security",
     "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "codeclimate-test-reporter": "^0.5.1",
+    "jest": "^29.7.0",
+    "jest-cli": "^29.7.0"
   }
 }
